Bug 149713 - Hypenation texts show like available (with black colour) but are not.
Summary: Hypenation texts show like available (with black colour) but are not.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-24 08:39 UTC by NISZ LibreOffice Team
Modified: 2022-06-29 06:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Showing the problem (331.17 KB, image/png)
2022-06-24 08:41 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-06-24 08:39:59 UTC
Description:
If the Hypenation turns off the "Hypenation zone" and "Minimum word length in characters" texts are still black and not grey like other texts in the Hypenation section which are inavailable.

Steps to Reproduce:
1. Open a Writer
2. Click Format -> Paragraph -> Text Flow

Actual Results:
The "Hypenation zone" and "Minimum word length in characters" texts are black not grey.

Expected Results:
The "Hypenation zone" "Minimum word length in characters" texts should be grey if it is not available these option.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1eaf11278a2f2f81fbff774fef73f72a6b1a4efb
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-06-24 08:41:24 UTC
Created attachment 180946 [details]
Showing the problem
Comment 2 Commit Notification 2022-06-27 07:47:29 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75e2d313760847110479f00a86a19fba4f508181

tdf#149713 sw para dialog: gray out labels of the new options

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-06-27 11:01:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/b78a78fe9c0c5d919dccd88cce557eb22974a9a7

tdf#149713 sw para dialog: gray out labels of the new options

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-06-29 06:27:59 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 51bfd4a3105e4a406dc8f220102520202a72150a
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL