tdf#149713 sw para dialog: gray out labels of the new options

Labels of the new hyphenation options "Hyphenation zone" and
"Minimum word length in characters" were always black, instead
of gray, when Hyphenation is disabled.

Follow-up to commit 7a1d4b7d1db93ca1f541856a8d00d621d50e7bd6
"tdf#149420 sw offapi xmloff: add hyphenation zone" and
commit 29359fc15c435cec17987fd6221ab6833d38746e
"tdf#149324 sw offapi xmloff: add option to not hyphenate short words".

Change-Id: Ic41c2fa0fa69385013b1e90568084956cc5d791d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136367
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4a42999bfa13e580279067d87fe390ce53a664b1)