cui/source/inc/paragrph.hxx
@@ -232,7 +232,9 @@ private:
     std::unique_ptr<weld::SpinButton> m_xExtHyphenAfterBox;
     std::unique_ptr<weld::Label> m_xMaxHyphenLabel;
     std::unique_ptr<weld::SpinButton> m_xMaxHyphenEdit;
+    std::unique_ptr<weld::Label> m_xMinWordLabel;
     std::unique_ptr<weld::SpinButton> m_xMinWordLength;
+    std::unique_ptr<weld::Label> m_xHyphenZoneLabel;
     std::unique_ptr<SvxRelativeField> m_xHyphenZone;
 
     // pagebreak
